test-cases/negative/test_018_undefined_method.lay
# negative test: method call on undefined method
# expected: error should be thrown

the variable person of type Person is a new Person with
  name is 'Alice'
call person dot nonexistent_method


